# Notification_service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notification_service/: .env  db.sqlite3
notification_service/mailing_app/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  thread.py  views.py
notification_service/mailing_app/migrations/: 0001_initial.py  0002_remove_message_status_message_is_sent_and_more.py  0003_remove_message_is_sent_message_status.py  0004_alter_message_status.py  0005_alter_message_status.py
notification_service/mailing_app/tests/: test_api.py  test_models.py
notification_service/notification_service/: celery.py  settings.py  urls.py
